projects/elements/src/toolbar/toolbar.css
:host {
  --background: var(--nve-sys-layer-container-background);
  --color: var(--nve-sys-layer-canvas-color);
  --padding: 0 var(--nve-ref-size-300);
  --min-height: var(--nve-ref-size-1000);
  --border-radius: var(--nve-ref-border-radius-sm);
  --gap: var(--nve-ref-space-sm);
  --border-bottom: 0;
  --box-shadow: var(--nve-ref-shadow-100);
  --width: 100%;
  contain: initial;
}

:host([container='flat']),
:host([container='inset']) {
  --background: transparent;
  --padding: var(--nve-ref-size-100);
  --border-bottom: var(--nve-ref-border-width-md) solid var(--nve-ref-border-color-muted);
  --box-shadow: none;
  --border-radius: 0;
  --padding: 0;
}

:host([container='full']) {
  --box-shadow: none;
  --border-radius: 0;
}

:host([container='inset']) {
  --border-bottom: 0;
}

:host([container='flat']:focus-within) {
  --border-bottom: var(--nve-ref-border-width-md) solid var(--nve-ref-border-color-emphasis);
}

:host([status='accent']) {
  --background: var(--nve-sys-support-accent-color);
  --color: var(--nve-sys-text-white-color);
}

:host([status='accent']) ::slotted(nve-button),
:host([status='accent']) ::slotted(nve-icon-button),
:host([status='accent']) nve-icon-button,
:host([status='accent']) ::slotted(nve-button),
:host([status='accent']) ::slotted(nve-icon-button),
:host([status='accent']) nve-icon-button {
  --color: var(--nve-sys-text-white-color) !important;
  --_icon-color: var(--nve-sys-text-white-color) !important;
}

:host([status='accent']) ::slotted([nve-text]),
:host([status='accent']) ::slotted([nve-text]) {
  color: var(--nve-sys-text-white-color) !important;
}

[internal-host] {
  background: var(--background);
  color: var(--color);
  padding: var(--padding);
  min-height: var(--min-height);
  border-radius: var(--border-radius);
  border-bottom: var(--border-bottom);
  box-shadow: var(--box-shadow);
  width: var(--width);
  gap: var(--gap);
  display: flex;
  align-items: center;
}

:host([orientation='vertical']) {
  --padding: var(--nve-ref-size-200) 0;
  --width: var(--nve-ref-size-1000);
  --gap: var(--nve-ref-space-xs);
}

:host([orientation='vertical']) [internal-host],
:host([orientation='vertical']) slot {
  flex-direction: column;
  align-items: center;
  margin: 0;
}

:host([orientation='vertical']) ::slotted(nve-divider),
:host([orientation='vertical']) ::slotted(nve-divider) {
  width: 100%;
}

[name='prefix'],
[name='suffix'] {
  display: none;
  gap: var(--gap);
  align-items: end;
}

[name='suffix'] {
  align-items: end;
}

:host(:state(has-prefix)) [name='prefix'],
:host(:state(has-suffix)) [name='suffix'] {
  display: flex;
}

::slotted(nve-combobox),
::slotted(nve-search),
::slotted(nve-input),
::slotted(nve-combobox),
::slotted(nve-search),
::slotted(nve-input) {
  --border-bottom: 0;
  min-width: 20cqw;
  flex: 1;
}

::slotted(nve-select),
::slotted(nve-select) {
  --border-bottom: 0;
}

slot:not([name]) {
  gap: var(--gap);
  width: 100%;
  display: flex;
  align-items: center;
  text-wrap: nowrap;
  overflow-x: auto;
  overflow-y: hidden;
  margin-inline-end: var(--nve-ref-space-xs);
  scrollbar-color: var(--nve-ref-border-color-muted) var(--background);
  scrollbar-width: thin;
}

:host([content='wrap']) slot:not([name]) {
  gap: var(--gap);
  width: 100%;
  display: flex;
  flex-wrap: wrap;
  text-wrap: balance;
  overflow-x: initial;
}

:host(:state(scrollbar)) slot:not([name]) {
  margin-bottom: -14px;
}

